--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <section class="split contact">
                     <section class="alt">
                         <h3>Address</h3>
-                        <p>224 South Kendall Avenue #51<br /> Kalamazoo, MI 49006</p>
+                        <p>Kalamazoo,<br />MI 49006</p>
                     </section>
                     <section>
                         <h3>Phone</h3>
