--- a/generic.html
+++ b/generic.html
@@ -49,8 +49,11 @@
                     <p>Hey, If you've reached at this point of the page <br /> I hope that you enjoyed exploring my website.<br /></p>
                 </header>
                 <div class="image main"><img src="images/Anfaal.jpg" alt="" /></div>
-                <p>My name is Anfaal Faisal and I am currently pursuing Computer Science in Western Michigan University, my main goal for making this website is to have a collection of projects that I have done over my career and also represent this website
-                    as my personal portfolio. Currently I am a senior and will be graduating in Fall 2021, I aspire to be a web developer and aim to gain as much experience as I can from firms that are willing to hire. </p>
+                <p>My name is Anfaal Faisal and I am currently pursuing Computer Science in Western Michigan University in the USA, I come from Pakistan and I have lived in the Middle East all my life and have been familiarized with different cultures of
+                    the world, this has not only improved my ability to think in a different way, but it has made me more aware of what the world has to offer. My main goal for making this website is to have a collection of projects that I have done over
+                    my career and also represent this website as my personal portfolio. Currently I am a senior and will be graduating in Fall 2021, I aspire to be a web developer and aim to gain as much experience as I can from firms that are willing
+                    to hire.
+                </p>
                 <p>This year I aim to indulge myself in more web development work as well as Java related projects for application development, and also aim to get into an internship, however, during this pandemic situation, a lot of internships and jobs
                     have been discontinued, so till this goes on I aim to enhance my skills in terms of coding. If you have reached till the end, thank you for visiting, and I hope that all of you are healthy and safe!</p>
             </section>
