--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <html>
 
 <head>
+    <link rel="icon" href="../AFJ_PersonalWeb/images/LOGO.png">
     <title>AFJDeveloper</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
