--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
 <html>
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-166849837-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-166849837-1');
+    </script>
     <link rel="icon" href="../AFJ_PersonalWeb/images/LOGO.png">
     <title>AFJDeveloper</title>
     <meta charset="utf-8" />
