--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
                     <header>
                         <span class="date">April 22, 2020</span>
                         <h2>
-                            <a href="#">Computer<br /> Assembly
+                            <a href="#">Web<br /> Development
                             </a>
                         </h2>
                     </header>
-                    <a href="https://github.com/afj-4321/CompOrgAssembly_Projects" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-                    <p>C and MSP 430 projects to understand the concepts of how an assembler works using linux and MSP 430 device. This was done in Western Michigan University, as I am currently pursuing computer science.</p>
+                    <a href="https://github.com/afj-4321/WebTech_Assignments" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+                    <p>A compilation of Web Development projects to understand the concepts of CSS, HTML5, mySQL, php. This was done in Western Michigan University, as I am currently pursuing computer science.</p>
                     <ul class="actions special">
-                        <li><a href="https://github.com/afj-4321/CompOrgAssembly_Projects" class="button">Take a look at the codes</a></li>
+                        <li><a href="https://github.com/afj-4321/WebTech_Assignments" class="button">Take a look at the codes</a></li>
                     </ul>
                 </article>
                 <article>
