update on my resume

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
         gtag('config', 'UA-166849837-1');
     </script>
+
     <link rel="icon" href="../AFJ_PersonalWeb/images/LOGO.png">
     <title>AFJDeveloper</title>
     <meta charset="utf-8" />
@@ -45,7 +46,7 @@
 
         <!-- Header -->
         <header id="header">
-            <a href="index.html" class="logo">ANFAAL</a>
+            <a href="./Imortant files/Anfaal Faisal Classic CV 1.PDF" class="logo">Click here to view my RESUME</a>
         </header>
 
         <!-- Nav -->
