--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <!-- Header -->
         <header id="header">
-            <a href="./Imortant files/Anfaal Faisal Classic CV 1.PDF" class="logo">Click here to view my RESUME</a>
+            <a href="./Imortant files/Anfaal Faisal Classic CV 1.PDF" target="_blank" class="logo">Click here to view my RESUME</a>
         </header>
 
         <!-- Nav -->
