--- a/index.html
+++ b/index.html
@@ -84,15 +84,16 @@
             <section class="posts">
                 <article>
                     <header>
-                        <span class="date">April 24, 2020</span>
-                        <h2><a href="#">Error<br />
-										404</a></h2>
+                        <span class="date">August 3rd, 2021</span>
+                        <h2><a href="#">Travelling Salesman Problem<br />
+										Using Branch and Bound</a></h2>
                     </header>
-                    <a href="https://error404wt3500.000webhostapp.com/index.html" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-                    <p>I was fortunate enough to enroll in a course called Web Technology, after learning concepts needed for web development, we were required to make a final website, hence came ERROR 404, feel free to check that website out, by clicking
-                        the logo! </p>
+                    <a href="https://github.com/afj-4321/TSP_BnB_Algo" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+                    <p>The travelling salesman problem (also called TSP) asks the following question: “Given a list of cities and the distances between each pair of cities, what is the shortest possible route that visits each city exactly once and returns to the origin city?”.
+
+This is what my algorithm tries to achieve using Branch and Bound. The program is done in C language, hence why it is advisable to use the program on an terminal (linux/unix systems), for best results. VS code could work too </p>
                     <ul class="actions special">
-                        <li><a href="https://github.com/afj-4321/ERROR404-FINAL-PROJECT" class="button">Take A look at the code</a></li>
+                        <li><a href="https://github.com/afj-4321/TSP_BnB_Algo" class="button">Take A look at the code</a></li>
                     </ul>
                 </article>
                 <article>
