--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <a href="https://github.com/afj-4321/TSP_BnB_Algo" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
                     <p>The travelling salesman problem (also called TSP) asks the following question: “Given a list of cities and the distances between each pair of cities, what is the shortest possible route that visits each city exactly once and returns to the origin city?”.
 
-This is what my algorithm tries to achieve using Branch and Bound. The program is done in C language, hence why it is advisable to use the program on an terminal (linux/unix systems), for best results. VS code could work too </p>
+This is what my algorithm tries to achieve using Branch and Bound. This program is done in C language.</p>
                     <ul class="actions special">
                         <li><a href="https://github.com/afj-4321/TSP_BnB_Algo" class="button">Take A look at the code</a></li>
                     </ul>
